# Blacknode

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  banner.ps1  docker-compose.published.yml  docker-compose.yml  docker-up.bat  docker-up.ps1  pyproject.toml  start.bat  start.ps1  start.sh
.agents/skills/blacknode-development/: SKILL.md
.agents/skills/blacknode-workflow/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml
community-nodes/: README.md  text_extractors.py
crates/: README.md
crates/blacknode-cli/: Cargo.toml
crates/blacknode-cli/src/: main.rs
crates/blacknode-core/: Cargo.toml
crates/blacknode-core/src/: error.rs  graph.rs  lib.rs  node.rs  port.rs
crates/blacknode-py/: Cargo.toml
crates/blacknode-py/src/: lib.rs
crates/blacknode-runtime/: Cargo.toml
crates/blacknode-runtime/src/: lib.rs
crates/blacknode-types/: Cargo.toml
crates/blacknode-types/src/: lib.rs
custom-nodes/: README.md
docker/: Caddyfile  Dockerfile.cutlass-test  Dockerfile.editor  Dockerfile.server  nginx.editor.conf
docker/cutlass/: Dockerfile  worker.py
docker/sandbox/: Dockerfile
docs/: agent-guide.md  aiq-integration.md  custom-nodes.md  demo-script.md  deployment-architecture.md  deployment-roadmap.md  docker-compose.md  docker-publish.md  drivers.md  episode-datasets.md  episode-evaluator.md  framework-export.md  future-ideas.md  learned-nodes-internals.md  learned-nodes-sandbox.md  learned-nodes-test-plan.md  learned-nodes.md  mcp-test-prompts.md  nvidia-agent-stack.md  nvidia-gpu-blocks.md  nvidia-mission-control.md  nvidia-nim-demo.md  nvidia-physical-ai.md  nvidia-visual-rag.md  packages.md  presentation-checklist.md  public-preview-checklist.md  python-roundtrip.md  quickstart-mcp.md  release-v0.1.0-preview.md  robot-policy-training.md  rosbridge-robot-quickstart.md  slack-nim-demo.md  so-arm101-five-minute-demo.md  so-arm101-leader-follower.md  so-arm101-quickstart.md  telegram-nim-demo.md  todays-goal.md  training-data-loop.md  walkthrough.md  (+3 more)
editor/: index.html  package-lock.json  package.json  vite.config.ts
editor-server/: device_registry.py  requirements.txt  run_store.py  server.py
editor/src/: App.tsx  api.ts  categories.ts  clipboard.ts  credentials.ts  defaultSubgraphs.ts  graphLayout.ts  graphRun.ts  index.css  inputControls.ts  liveNodeTypes.ts  models.ts  nodeTypeLabel.ts  packageGroups.ts  placement.ts  portColors.ts  portLabels.ts  pythonToolPresets.ts  store.ts  types.ts  vite-env.d.ts
editor/src/components/: BlackNode.tsx  ConsolePanel.tsx  DatasetBrowserPanel.tsx  DeploymentsPanel.tsx  DevicesPanel.tsx  Inspector.tsx  LearnedNodesPanel.tsx  McpPanel.tsx  ModelNode.tsx  NodeFrame.tsx  NodePalette.tsx  NodeSearch.tsx  NodeStatus.tsx  OutputNode.tsx  PackagesPanel.tsx  RunsPanel.tsx  RuntimePanel.tsx  ScriptEditor.tsx  SubgraphInputNode.tsx  SubgraphOutputNode.tsx  SubnetBreadcrumb.tsx  SubnetNode.tsx  TemplateGallery.tsx  ValueNode.tsx  WorkflowManager.tsx
examples/: _bootstrap.py  converted_nvidia_nim.py  converted_text_pipeline.py  custom_node.py  hello_agent.py  multi_provider.py  research_pipeline.py  scene_build.py
examples/learned/parse_rss/: README.md  manifest.json  node.py
python/blacknode/: __init__.py  cli.py  console.py  contracts.py  conversation_state.py  deployments.py  discovery.py  engine.py  graph.py  live_sync.py  node.py  package_index.py  packages.py  process.py  python_importer.py  streams.py  vision_models.py  workflow.py
python/blacknode/exporters/: __init__.py  langgraph.py  registry.py  scaffolds.py
python/blacknode/integrations/: __init__.py  registry.py  slack_runtime.py  status.py  telegram_runtime.py
python/blacknode/learned/: __init__.py  manifest.py  registry.py
python/blacknode/mcp/: __init__.py  server.py  tools.py
python/blacknode/nodes/: __init__.py  ai.py  api.py  core.py  cuda.py  database.py  flow.py  image.py  io.py  math.py  messaging.py  nvidia.py  nvidia_rag.py  rag.py  rating.py  routing.py  scene.py  search.py  subnet.py  trajectory.py  (+1 more)
scripts/: _cutlass_bench.py  _cutlass_container_test.py  _cutlass_demo.py  _cutlass_heavy.py  _cutlass_template_test.py  complex_learned_demo.py  demo_dry_run.py  real_repo_learned_demo.py  smoke_test_mcp.py
skills/blacknode-workflow/: SKILL.md
templates/: gpu-image-filter.json  llm-chat.json  nvidia-ai-mission-control.json  nvidia-local-nim-launch.json  nvidia-nim-benchmark.json  nvidia-nim-mcp-demo.json  nvidia-nim.json  nvidia-video-intelligence-mission-control.json  nvidia-visual-rag-comparator.json  python-tool-agent.json  research-pipeline.json  slack-nim-agent.json  subnet-tool-agent.json  subnet-tool-call.json  telegram-nim-agent.json  text-pipeline.json  visual-tool-agent.json
tests/: conftest.py  test_agent_skill.py  test_api_keys.py  test_cli.py  test_complex_learned_demo.py  test_contracts.py  test_create_node_type.py  test_create_node_type_integration.py  test_cuda_nodes.py  test_custom_nodes_and_library.py  test_demo_dry_run.py  test_deployments.py  test_driver_registry.py  test_editor_api_keys.py  test_editor_deployments.py  test_editor_devices.py  test_editor_graph_run.py  test_editor_learned_nodes.py  test_editor_mcp_actions.py  test_editor_media_output.py  test_editor_onboarding_state.py  test_editor_package_welcome.py  test_editor_robot_joint_ports.py  test_editor_runtime.py  test_editor_template_groups.py  test_editor_template_packages.py  test_editor_variadic_ports.py  test_examples.py  test_flow_nodes.py  test_framework_exporters.py  test_graph.py  test_image_nodes.py  test_io.py  test_launchers.py  test_mcp_server.py  test_mcp_tools.py  test_nim_finetune.py  test_node_enum_param.py  test_nvidia_nodes.py  test_nvidia_rag.py  (+15 more)
tests/learned/: __init__.py  test_manifest.py  test_registry.py  test_registry_integration.py
tests/sandbox/: test_docker_runner.py  test_docker_runner_integration.py  test_static.py
(+15 files in other folders)
