[workspace]
members = [
    "crates/blacknode-types",
    "crates/blacknode-core",
    "crates/blacknode-runtime",
    "crates/blacknode-py",
    "crates/blacknode-cli",
]
resolver = "2"

[workspace.dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
petgraph    = "0.6"
pyo3        = { version = "0.28", features = ["extension-module"] }
thiserror   = "1"
anyhow      = "1"
dashmap     = "5"
uuid        = { version = "1", features = ["v4", "serde"] }
