[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blacknode"
version = "0.1.0"
description = "Houdini-style node graph for AI agents and scene assembly"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.25",
    "docker>=7.1",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "mcp>=1.0",
    "pytest",
]
mcp = [
    "mcp>=1.0",
]
rust = [
    "maturin>=1.0,<2.0",
]
slack = [
    "slack_bolt>=1.18",
    "slack_sdk>=3.27",
]
telegram = [
    "python-telegram-bot>=20",
]
# Real GPU compute blocks (CUDAKernelLab). Requires an NVIDIA GPU + CUDA 12.x.
gpu = [
    "cupy-cuda12x>=13",
    "numpy>=1.24",
    "pillow>=10",
]

[project.scripts]
blacknode = "blacknode.cli:main"

[tool.setuptools]
package-dir = { "" = "python" }

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
# Collect only the real suite. Without this, a bare `pytest` (as CI runs) also
# globs stray `*_test.py` dev scripts under scripts/, whose top-level code can
# abort collection.
testpaths = ["tests"]

# When the Rust core ships (roadmap milestone 2), restore the maturin backend:
#   [build-system]
#   requires = ["maturin>=1.0,<2.0"]
#   build-backend = "maturin"
#   [tool.maturin]
#   features = ["pyo3/extension-module"]
#   python-source = "python"
#   module-name = "blacknode.blacknode_rs"
