[package]
name    = "blacknode-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
blacknode-types = { path = "../blacknode-types" }
petgraph        = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
uuid            = { workspace = true }
thiserror       = { workspace = true }
anyhow          = { workspace = true }
dashmap         = { workspace = true }
